objects/JLOC__c.object
<CustomObject>
    <fields>
        <fullName>Absa_Hold_5_of_the_Net_Economic_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absa Hold 5% of the Net Economic Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Ancillary_RoRWA__c</fullName>
        <label>Additional Ancillary RoRWA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affected_of_Exchange_Control_Regulation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affected of Exchange Control Regulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_Calculation_Document_ID__c</fullName>
        <label>Ancillary Calculation Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By_Financial_Crime_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved By Financial Crime Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Subject_to__c</fullName>
        <label>Approved Subject to</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_Comment__c</fullName>
        <label>Asset Hub Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_Framework_considered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Hub Framework considered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banker_Case_ID__c</fullName>
        <label>Banker Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_Commitment_Comments__c</fullName>
        <label>Barclays Commitment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Barclays_Commitment__c</fullName>
        <label>Barclays Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Barclays_Target_Hold_Comments__c</fullName>
        <label>Barclays Target Hold Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Barclays_Target_Hold__c</fullName>
        <label>Barclays Target Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Barclays_Underwriting_Comments__c</fullName>
        <label>Barclays Underwriting Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Barclays_Underwriting__c</fullName>
        <label>Barclays Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>Base Url of the Organisation</description>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Client_Description__c</fullName>
        <label>Brief Client Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brief_Transaction_Description_Without__c</fullName>
        <label>Brief Transaction Description Without</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brief_Transaction_Description__c</fullName>
        <label>Brief Transaction Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Case_Relationship__c</fullName>
        <label>Business Case Relationship</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CLGD_Comments__c</fullName>
        <description>CLGD Comments field</description>
        <label>CLGD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLGD_Consumption__c</fullName>
        <label>CLGD Consumption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chatter_Post__c</fullName>
        <formula>&apos;JLOC related to Organisation: &apos; &amp;  Organisation__r.Name &amp; &apos; has been: &apos; &amp;  TEXT(JLOC_Status__c)</formula>
        <label>Chatter Post</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Revenue_History_and_Projections__c</fullName>
        <label>Client Revenue History and Projections</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitive_Landscape__c</fullName>
        <label>Competitive Landscape</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Compliance Issue</fullName>
                    <default>true</default>
                    <label>No Compliance Issue</label>
                </value>
                <value>
                    <fullName>Compliance Issue</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conduit__c</fullName>
        <label>Conduit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conflict_Clearance_Document_ID__c</fullName>
        <label>Conflict Clearance Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflict_Clearance_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict Clearance Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_Vote__c</fullName>
        <label>Coverage Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Appetite_Comment__c</fullName>
        <label>Credit Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DG_Comments__c</fullName>
        <label>DG Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DG__c</fullName>
        <label>DG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_JLOC__c</fullName>
        <label>Date of last JLOC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Cleared_For_Conflicts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Cleared For Conflicts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Logged_On_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Logged On CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Presented_To_Deal_Forum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Presented To Deal Forum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Polices_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Team Polices Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge</fullName>
                </value>
                <value>
                    <fullName>Term Loan</fullName>
                </value>
                <value>
                    <fullName>RCF</fullName>
                </value>
                <value>
                    <fullName>Term Loan/RCF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussed_with_BBT_re_operating_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed with BBT re:operating product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_with_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed with Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_with_RM_re_FX_IRD_other_op__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed with RM re FX/IRD/ other oppos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_End_Date_Comments__c</fullName>
        <label>Distribution End Date Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_end_date__c</fullName>
        <label>Distribution end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_client_RoRWA__c</fullName>
        <label>Existing client RoRWA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Description__c</fullName>
        <label>Forecast/Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_RoRWA__c</fullName>
        <label>Future RoRWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Go_Approval_From_Deal_Forum_Quorum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Go Approval From Deal Forum Quorum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidelines_CLGD__c</fullName>
        <label>Guidelines - CLGD</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guidelines_MEG__c</fullName>
        <label>Guidelines - MEG</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guidelines_Mandate_and_Scale__c</fullName>
        <label>Guidelines - Mandate and Scale</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headline_Client_Numbers__c</fullName>
        <label>Headline Client Numbers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_are_we_being_clear_in_communication__c</fullName>
        <label>How are we being clear in communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_are_we_creating_long_term_value__c</fullName>
        <label>How are we creating long-term value?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_are_we_creating_shared_value__c</fullName>
        <label>How are we creating shared value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_are_we_making_a_profit__c</fullName>
        <label>How are we making a profit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_of_Not_Participating_on_Revenues__c</fullName>
        <label>Impact of Not Participating on Revenues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact_of_Participation_on_Revenues__c</fullName>
        <label>Impact of Participation on Revenues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investment_Banking_Vote__c</fullName>
        <label>Investment Banking Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_closed_JLOC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a confidential transaction? Do we have MNPI (Material Non Public Information)?</inlineHelpText>
        <label>Is this a closed JLOC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JLOC_Document_ID__c</fullName>
        <label>JLOC Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JLOC_Meeting_Notes__c</fullName>
        <label>JLOC Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JLOC_Status__c</fullName>
        <label>JLOC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted to Secretary</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Resubmit</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Sent to Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JLOC_Type__c</fullName>
        <label>JLOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fast Track JLOC</fullName>
                </value>
                <value>
                    <fullName>JLOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Mitigants__c</fullName>
        <label>Key Mitigants</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Risks__c</fullName>
        <label>Key Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LGD_Comments__c</fullName>
        <label>LGD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LGD__c</fullName>
        <label>LGD (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Opened_For_Editing_At__c</fullName>
        <label>Last Opened For Editing At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Opened_For_Editing_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Opened For Editing By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JLOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_only_RoRWA__c</fullName>
        <label>Loan only RoRWA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Management_Case_ID__c</fullName>
        <label>Management Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManyWho_Join_URL__c</fullName>
        <label>ManyWho Join URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_to_bookrun_this_facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market to bookrun this facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_Vote__c</fullName>
        <label>Markets Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_Term_Relationship_Bellwethers__c</fullName>
        <label>Near Term Relationship Bellwethers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>JLOC</relationshipLabel>
        <relationshipName>JLOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JLOC</relationshipLabel>
        <relationshipName>JLOC</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Vote__c</fullName>
        <label>Portfolio Management Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Screening_Document_ID__c</fullName>
        <label>Pre Screening Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Justification__c</fullName>
        <label>Pricing Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pricing_and_Returns_Document_ID__c</fullName>
        <label>Pricing and Returns Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_and_Returns__c</fullName>
        <label>Pricing and Returns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proposed_Deal_Price_Comments__c</fullName>
        <label>Proposed Deal Price Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_deal_price__c</fullName>
        <label>Proposed deal price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_JLOC__c</fullName>
        <description>Please provide a short summary for the purpose of this JLOC.</description>
        <inlineHelpText>Please provide a short summary for the purpose of this JLOC.</inlineHelpText>
        <label>Reason for JLOC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReputationalMatters__c</fullName>
        <label>Reputational Matters</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Securitized_Assets_Liquidity_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Securitized Assets / Liquidity Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal - Increase</fullName>
                </value>
                <value>
                    <fullName>Renewal - Same</fullName>
                </value>
                <value>
                    <fullName>Renewal - Decrease</fullName>
                </value>
                <value>
                    <fullName>Bridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stress_Case_ID__c</fullName>
        <label>Stress Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_investment_grade_credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub-investment grade credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subsidy_Notes__c</fullName>
        <label>Subsidy Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subsidy__c</fullName>
        <label>Subsidy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Syn_team_advised_on_Facility_Syndicati__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syn team advised on Facility/Syndication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Syndicate__c</fullName>
        <label>Syndicate</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Syndication_View_and_Stratergy__c</fullName>
        <label>Syndication View and Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tenor_Comments__c</fullName>
        <label>Tenor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tenor__c</fullName>
        <label>Tenor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_years__c</fullName>
        <label>Term (years)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annualised_Income__c</fullName>
        <label>Total Annualised Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Facility_Size__c</fullName>
        <label>Total Balance / Facility Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Existing_Facility__c</fullName>
        <label>Total Existing Facility</label>
        <summarizedField>Existing_Facility__c.Facility__c</summarizedField>
        <summaryForeignKey>Existing_Facility__c.JLOC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fin_Limits_Proposed__c</fullName>
        <label>Proposed Financing Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Limits__c</fullName>
        <formula>Total_Primary_Limits__c  +  Total_Trading_Limits__c  +  Total_Headroom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financing Limits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Headroom__c</fullName>
        <label>Total Headroom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Limits__c</fullName>
        <label>Total Primary Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Probability_weighted_RWA__c</fullName>
        <label>Total Probability weighted RWA</label>
        <summarizedField>Potential_Future_Opportunity__c.Probability_weighted_RWA__c</summarizedField>
        <summaryForeignKey>Potential_Future_Opportunity__c.JLOC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Probability_weighted_revenue__c</fullName>
        <label>Total Probability weighted revenue</label>
        <summarizedField>Potential_Future_Opportunity__c.Probability_Weighted_Revenue__c</summarizedField>
        <summaryForeignKey>Potential_Future_Opportunity__c.JLOC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_RoRWA__c</fullName>
        <label>Total RoRWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Trading_Limits__c</fullName>
        <label>Total Trading Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Vote__c</fullName>
        <label>Trade Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Involves__c</fullName>
        <label>Transaction Involves</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a US issuer/borrower, guarantor, credit support provider</fullName>
                </value>
                <value>
                    <fullName>a non-U.S. issuer/borrower, guarantor, credit support provider which is subject to US regulation/ supervision</fullName>
                </value>
                <value>
                    <fullName>a non-U.S. issuer/borrower, guarantor, credit support provider which is not subject to US regulation/supervision but is getting  financing/ raising money from US persons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Structure__c</fullName>
        <label>Transaction Structure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transferability_Comments__c</fullName>
        <label>Transferability Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transferability__c</fullName>
        <label>Transferability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, freely transferable</fullName>
                </value>
                <value>
                    <fullName>Yes, Absa permitted to freely transfer rights to Permitted Transferee List</fullName>
                </value>
                <value>
                    <fullName>No, Absa permitted to transfer rights with borrower&apos;s consent</fullName>
                </value>
                <value>
                    <fullName>No, Absa not permitted to transfer rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferee_Options_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferee Options Discussed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bilateral</fullName>
                </value>
                <value>
                    <fullName>Syndication/Club</fullName>
                </value>
                <value>
                    <fullName>Underwrite-Best Efforts</fullName>
                </value>
                <value>
                    <fullName>Underwrite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>